first barely working version of google pubsub